--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <a href="{% url 'accounts:signup' %}">회원가입</a>
+<a href="{% url 'accounts:login' %}">로그인</a>
+<h1>{{ user.username }}</h1>
+<a href="{% url 'accounts:logout' %}">로그아웃</a>
 {% endblock %}
