--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if request.user.is_authenticated %}
+<a class="text-decoration-none text-dark" href="{% url 'accounts:detail' user.pk %}"><h1>{{ user.username }}</h1></a>
+<a href="{% url 'accounts:logout' %}">로그아웃</a>
+{%else%}
 <a href="{% url 'accounts:signup' %}">회원가입</a>
 <a href="{% url 'accounts:login' %}">로그인</a>
-<h1>{{ user.username }}</h1>
-
-<a href="{% url 'accounts:logout' %}">로그아웃</a>
+{% endif %}
 {% endblock %}
