--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -20,6 +20,9 @@
     </div>
   </div>
   {% endfor %}
+  <div class="d-grid">
+    <a href="{% url 'reviews:create' %}" class="btn btn-primary">글쓰기</a>
+  </div>
 </div>
 
 {% endblock %}
