--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -16,7 +16,7 @@
 <div class="d-grid gap-2 d-flex justify-content-end">
   {% if request.user == review.user %}
   <a href="{% url 'reviews:update' review.id %}" class="btn btn-primary">수정</a>
-  <form action="" method="POST">
+  <form action="{% url 'reviews:delete' review.id %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="삭제" class="btn btn-danger">
   </form>
