--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -4,6 +4,15 @@
 <div class="m-3">
   <h1>글 조회</h1>
   <hr>
+  <div class="d-grid gap-2 d-flex justify-content-end">
+    {% if request.user == review.user %}
+    <a href="{% url 'reviews:update' review.id %}" class="btn btn-primary">수정</a>
+    <form action="{% url 'reviews:delete' review.id %}" method="POST">
+      {% csrf_token %}
+      <input type="submit" value="삭제" class="btn btn-danger">
+    </form>
+    {% endif %}
+  </div>
   <h3>제목: {{review.title}}</h3>
   <h4>영화: {{review.movie_name}}</h4>
   <p>평점: {{review.grade}}</p>
@@ -13,14 +22,21 @@
   {% endif %}
   <p>{{review.content}}</p>
 </div>
-<div class="d-grid gap-2 d-flex justify-content-end">
-  {% if request.user == review.user %}
-  <a href="{% url 'reviews:update' review.id %}" class="btn btn-primary">수정</a>
-  <form action="{% url 'reviews:delete' review.id %}" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="삭제" class="btn btn-danger">
-  </form>
-  {% endif %}
-</div>
-
+<hr>
+<!--comment-->
+<h3>댓글 ({{comments.count}})</h3>
+{% for comment in comments %}
+  <div>
+    <p><a href="{% url 'accounts:detail' comment.user.id %}" class="text-decoration-none">{{comment.user}}</a> | {{comment.content}}</p>
+  </div>
+{% empty%}
+  <p>첫 댓글을 작성해주세요</p>
+{% endfor %}
+{% if request.user.is_authenticated %}
+<form action="{% url 'reviews:comment_create' review.id %}" method="POST">
+  {% csrf_token %}
+  {% bootstrap_form comment_form %}
+  {% bootstrap_button button_type="submit" content="작성"%}
+</form>
+{% endif %}
 {% endblock %}
