--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,33 @@
   {% bootstrap_css %}
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-none px-5">
+    <div class="container-fluid">
+      <a class="navbar-brand btn text-success" href="">Home</a>
+      <a class="navbar-brand btn text-dark" href="">리뷰 보기</a>
+      {% if request.user.is_authenticated %}
+        <a class="navbar-brand btn text-dark" href="">리뷰 작성</a>
+      {% endif %}
+      <form class="ms-auto d-flex" role="search" action="">
+        <input class="form-control me-2" type="search" placeholder="검색어를 입력해주세요." aria-label="Search" name="search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+      <ul class="navbar-nav ms-auto me-3 mb-2 mb-lg-0">
+        {% if request.user.is_authenticated %}
+          <li class="nav-item nav-link align-middle">
+            <span class="btn text-success">
+              <a class="text-decoration-none border-none  text-dark fs-5" href="{% url 'accounts:detail' user.pk %}">{{ request.user }}</a>님</span>
+            <a class="btn text-dark text-decoration-none" href="{% url 'accounts:logout' %}">로그아웃</a>
+          </li>
+        {% else %}
+          <li class="nav-item nav-link align-middle">
+            <a class="text-decoration-none fw-bold btn me-3" href="{% url 'accounts:signup' %}">회원가입</a>
+            <a class="text-decoration-none fw-bold btn" href="{% url 'accounts:login' %}">로그인</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     {% block content %}
     {% endblock content %}
