--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -5,7 +5,7 @@
   <h1>수정하기</h1>
   <form action="" method="POST">
       {% csrf_token %}
-      {% bootstrap_form form %}
+      {% bootstrap_form update_form %}
       <div class="text-end mx-3"><input type="submit" value="수정하기" class="btn btn-primary"></div>
   </form>
 </div>
