--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -6,20 +6,56 @@
 <div class="row m-4">
   <h1>리뷰 목록</h1>
   {% for review in reviews %}
-  <div class="col-4" >
+  <div class="col-3" >
     <div class="card my-3">
       {% if review.image %}
-      <img src="{{ review.image.url }}" class="card-img-top">
+      <a href="{% url 'reviews:detail' review.id %}"><img src="{{ review.image.url }}" class="card-img-top"></a>
       {% else %}
-      <img src="{% static 'images/temp.jpg' %}">
+      <a href="{% url 'reviews:detail' review.id %}"><img src="{% static 'images/temp.jpg' %}" class="card-img-top"></a>
       {% endif %}
       <div class="card-body">
         <h5 class="card-title">{{ review.title }}</h5>
-        <a href="{% url 'reviews:detail' review.id %}" class="btn btn-primary">상세보기</a>
       </div>
     </div>
   </div>
   {% endfor %}
+  <!--페이징-->
+  <ul class="pagination pagination justify-content-center">
+    <!--이전페이지-->
+    {% if reviews.has_previous %}
+    <li class="page-item">
+      <a href="?page={{reviews.previous_page_number}}" class="page-link">이전</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a href="#" class="page-link" aria-disabled="true">이전</a>
+    </li>
+    {% endif %}
+    <!--페이지리스트-->
+    {% for page_number in reviews.paginator.page_range %}
+    {% if page_number >= reviews.number|add:-5 and page_number <= reviews.number|add:5 %}
+      {% if page_number == reviews.number %}
+      <li class="page-item active" aria-current="page">
+        <a href="?page={{ page_number }}" class="page-link">{{ page_number }}</a>
+      </li>
+      {% else %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+      </li>
+      {% endif %}
+    {% endif %}
+    {% endfor %}
+    <!--다음페이지-->
+    {% if reviews.has_next %}
+    <li class="page-item">
+      <a href="?page={{reviews.next_page_number}}" class="page-link">다음</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a href="#" class="page-link" aria-disabled="true">다음</a>
+    </li>
+    {% endif %}
+  </ul>
   <div class="d-grid">
     <a href="{% url 'reviews:create' %}" class="btn btn-primary">글쓰기</a>
   </div>
