--- a/mailing/templates/mailing/important.html
+++ b/mailing/templates/mailing/important.html
@@ -48,7 +48,7 @@
           </svg></a></th>
           {% endif %}
           <th>{{ mail.from_name }}</th>
-          <td><a href="{% url 'mailing:email_detail' mail.pk %}">{{ mail.title }}</a></td>
+          <td><a href="{% url 'mailing:detail' mail.pk %}">{{ mail.title }}</a></td>
           <td>{{ mail.created_at }}</td>
           <td><a href="{% url 'mailing:trash_throw_away' mail.id %}"><i class="bi bi-trash"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
