--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
       <a class="navbar-brand btn text-dark" href="{% url 'reviews:index' %}">리뷰 보기</a>
       {% if request.user.is_authenticated %}
         <a class="navbar-brand btn text-dark" href="{% url 'reviews:create' %}">리뷰 작성</a>
+        <a class="navbar-brand btn text-dark" href="{% url 'mailing:index' %}">메일</a>
       {% endif %}
       <form class="ms-auto d-flex" role="search" action="">
         <input class="form-control me-2" type="search" placeholder="검색어를 입력해주세요." aria-label="Search" name="search">
