--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   {% bootstrap_css %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% block css %}{% endblock css %}
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-none px-5">
