--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
         <a class="navbar-brand btn text-dark" href="{% url 'reviews:create' %}">리뷰 작성</a>
         <a class="navbar-brand btn text-dark" href="{% url 'mailing:index' %}">메일</a>
       {% endif %}
-      <form class="ms-auto d-flex" role="search" action="">
+      
+      <form class="ms-auto d-flex" role="search" action="{% url 'reviews:search' %}">
         <input class="form-control me-2" type="search" placeholder="검색어를 입력해주세요." aria-label="Search" name="search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
